// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Emoji: should be able remove emoji on backspace all 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "this ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`Emoji: should be able to change text with emoji into decisions all 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "localId": "abc-123",
      },
      "content": Array [
        Object {
          "attrs": Object {
            "localId": "abc-123",
            "state": "DECIDED",
          },
          "content": Array [
            Object {
              "text": "this ",
              "type": "text",
            },
            Object {
              "attrs": Object {
                "id": "1f604",
                "shortName": ":smile:",
                "text": "😄",
              },
              "type": "emoji",
            },
            Object {
              "text": " ",
              "type": "text",
            },
          ],
          "type": "decisionItem",
        },
      ],
      "type": "decisionList",
    },
  ],
  "type": "doc",
}
`;

exports[`Emoji: should be able to select emoji by clicking inside decisions all 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "localId": "abc-123",
      },
      "content": Array [
        Object {
          "attrs": Object {
            "localId": "abc-123",
            "state": "DECIDED",
          },
          "content": Array [
            Object {
              "text": "this ",
              "type": "text",
            },
            Object {
              "attrs": Object {
                "id": "1f604",
                "shortName": ":smile:",
                "text": "😄",
              },
              "type": "emoji",
            },
            Object {
              "text": " ",
              "type": "text",
            },
          ],
          "type": "decisionItem",
        },
      ],
      "type": "decisionList",
    },
  ],
  "type": "doc",
}
`;

exports[`Emoji: should be able to use emoji inside blockquote all 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "text": "some text ",
              "type": "text",
            },
            Object {
              "attrs": Object {
                "id": "1f170",
                "shortName": ":a:",
                "text": "🅰",
              },
              "type": "emoji",
            },
            Object {
              "text": " ",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "blockquote",
    },
  ],
  "type": "doc",
}
`;

exports[`Emoji: should be able to use emoji inside bulletList all 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "attrs": Object {
                    "id": "1f604",
                    "shortName": ":smile:",
                    "text": "😄",
                  },
                  "type": "emoji",
                },
                Object {
                  "text": " ",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
}
`;

exports[`Emoji: should be able to use emoji inside orderedList all 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "attrs": Object {
                    "id": "1f170",
                    "shortName": ":a:",
                    "text": "🅰",
                  },
                  "type": "emoji",
                },
                Object {
                  "text": " ",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "orderedList",
    },
  ],
  "type": "doc",
}
`;
